# fcitx5-anthy

./: CMakeLists.txt  COPYING  INSTALL  Messages.sh  README  README.md  org.fcitx.Fcitx5.Addon.Anthy.metainfo.xml.in  org.fcitx.fcitx5-anthy.metainfo.xml.in
.github/workflows/: check.yml
cmake/: FindAnthy.cmake
data/: CMakeLists.txt  fcitx-anthy.conf.in  fcitx-anthy.desc
icon/: CMakeLists.txt
po/: CMakeLists.txt  POTFILES.in.in  ca.po  da.po  de.po  fcitx-anthy.pot  fcitx5-anthy.pot  fr.po  he.po  ja.po  ka.po  ko.po  ru.po  vi.po  zh_CN.po  zh_TW.po
profile/: 101kana.sty  CMakeLists.txt  atok.sty  azik.sty  canna.sty  msime.sty  nicola-a.sty  nicola-f.sty  nicola-j.sty  oasys100j.sty  qkana.sty  tron-dvorak.sty  tron-qwerty-jp.sty  tsuki-2-203-101.sty  tsuki-2-203-106.sty  vje-delta.sty  wnn.sty
src/: CMakeLists.txt  action.cpp  action.h  action_defs.h  anthy-addon.conf.in  anthy-addon.conf.in.in  anthy.conf.in  common.h  config.cpp  config.h  conv.h  conversion.cpp  conversion.h  convert.c  convert.h  default_tables.cpp  default_tables.h  defaulttables.cpp  defaulttables.h  eim.c  eim.cpp  eim.h  engine.cpp  engine.h  factory.cpp  factory.h  fcitx-anthy.desc  imengine.cpp  imengine.h  kana.cpp  kana.h  key2kana.cpp  key2kana.h  key2kana_base.cpp  key2kana_base.h  key2kana_table.cpp  key2kana_table.h  key2kanabase.h  key2kanatable.cpp  key2kanatable.h  (+14 more)
test/: CMakeLists.txt  testanthy.cpp  teststylefile.cpp
test/addon/: CMakeLists.txt
test/inputmethod/: CMakeLists.txt
